--- a/TripAdvisor/src/main/resources/static/style.css
+++ b/TripAdvisor/src/main/resources/static/style.css
@@ -11,7 +11,7 @@ body::before {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    /* Zmieniona przezroczystość na 20% bieli */
+    /* 20% opacity*/
     background-color: rgba(255,255,255,0.2);
     pointer-events: none;
     z-index: -1;
